# serializer version: 1
# name: test_list_example
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example-97db95eb
  
    ''',
  })
# ---
# name: test_list_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_invalid_target_skip_invalid
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      [PROJECT_ROOT]/scenarios/example.json
          example-97db95eb
  
    ''',
  })
# ---
# name: test_list_no_sources
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      requires-package-does-not-exist-57cd4136
      requires-exact-version-does-not-exist-eaa03067
      requires-greater-version-does-not-exist-6e8e01df
      requires-less-version-does-not-exist-e45cec3c
      transitive-requires-package-does-not-exist-aca2796a
      example-97db95eb
      excluded-only-version-7a9ed79c
      excluded-only-compatible-version-b6b89642
      dependency-excludes-range-of-compatible-versions-1cd99bd0
      dependency-excludes-non-contiguous-range-of-compatible-versions-0fd25b39
      extra-required-76e5355c
      missing-extra-0997c767
      multiple-extras-required-e55f15c4
      extra-incompatible-with-extra-bf480858
      extra-incompatible-with-extra-not-requested-06ed3759
      extra-incompatible-with-root-b3bfe512
      extra-does-not-exist-backtrack-49778327
      direct-incompatible-versions-80d82ee8
      transitive-incompatible-with-root-version-a967e815
      transitive-incompatible-with-transitive-6866d8dc
      package-only-prereleases-9a1b3dda
      package-only-prereleases-in-range-19673198
      requires-package-only-prereleases-in-range-global-opt-in-51f94da2
      requires-package-prerelease-and-final-any-eebe53a6
      package-prerelease-specified-only-final-available-9d4725eb
      package-prerelease-specified-only-prerelease-available-6cc95bc8
      package-prerelease-specified-mixed-available-c97845e2
      package-multiple-prereleases-kinds-e290bf29
      package-multiple-prereleases-numbers-f5948c28
      transitive-package-only-prereleases-44ebef16
      transitive-package-only-prereleases-in-range-27759187
      transitive-package-only-prereleases-in-range-opt-in-26efb6c5
      transitive-prerelease-and-stable-dependency-f8aeea37
      transitive-prerelease-and-stable-dependency-opt-in-184fc65f
      transitive-prerelease-and-stable-dependency-many-versions-7017673e
      transitive-prerelease-and-stable-dependency-many-versions-holes-aaee5052
      requires-python-version-does-not-exist-0825b69c
      requires-python-version-less-than-current-f9296b84
      requires-python-version-greater-than-current-a11d5394
      requires-python-version-greater-than-current-many-02dc550c
      requires-python-version-greater-than-current-backtrack-ef060cef
      requires-python-version-greater-than-current-excluded-1bde0c18
      specific-tag-and-default-74e4a459
      only-wheels-4f019491
      no-wheels-614d801c
      no-wheels-with-matching-platform-737bbfd4
  
    ''',
  })
# ---
# name: test_list_no_target_finds_all_valid_scenarios
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/does-not-exist.json
          requires-package-does-not-exist-57cd4136
          requires-exact-version-does-not-exist-eaa03067
          requires-greater-version-does-not-exist-6e8e01df
          requires-less-version-does-not-exist-e45cec3c
          transitive-requires-package-does-not-exist-aca2796a
      scenarios/example.json
          example-97db95eb
      scenarios/excluded.json
          excluded-only-version-7a9ed79c
          excluded-only-compatible-version-b6b89642
          dependency-excludes-range-of-compatible-versions-1cd99bd0
          dependency-excludes-non-contiguous-range-of-compatible-versions-0fd25b39
      scenarios/extras.json
          extra-required-76e5355c
          missing-extra-0997c767
          multiple-extras-required-e55f15c4
          extra-incompatible-with-extra-bf480858
          extra-incompatible-with-extra-not-requested-06ed3759
          extra-incompatible-with-root-b3bfe512
          extra-does-not-exist-backtrack-49778327
      scenarios/incompatible-versions.json
          direct-incompatible-versions-80d82ee8
          transitive-incompatible-with-root-version-a967e815
          transitive-incompatible-with-transitive-6866d8dc
      scenarios/prereleases.json
          package-only-prereleases-9a1b3dda
          package-only-prereleases-in-range-19673198
          requires-package-only-prereleases-in-range-global-opt-in-51f94da2
          requires-package-prerelease-and-final-any-eebe53a6
          package-prerelease-specified-only-final-available-9d4725eb
          package-prerelease-specified-only-prerelease-available-6cc95bc8
          package-prerelease-specified-mixed-available-c97845e2
          package-multiple-prereleases-kinds-e290bf29
          package-multiple-prereleases-numbers-f5948c28
          transitive-package-only-prereleases-44ebef16
          transitive-package-only-prereleases-in-range-27759187
          transitive-package-only-prereleases-in-range-opt-in-26efb6c5
          transitive-prerelease-and-stable-dependency-f8aeea37
          transitive-prerelease-and-stable-dependency-opt-in-184fc65f
          transitive-prerelease-and-stable-dependency-many-versions-7017673e
          transitive-prerelease-and-stable-dependency-many-versions-holes-aaee5052
      scenarios/requires-python.json
          requires-python-version-does-not-exist-0825b69c
          requires-python-version-less-than-current-f9296b84
          requires-python-version-greater-than-current-a11d5394
          requires-python-version-greater-than-current-many-02dc550c
          requires-python-version-greater-than-current-backtrack-ef060cef
          requires-python-version-greater-than-current-excluded-1bde0c18
      scenarios/wheels.json
          specific-tag-and-default-74e4a459
          only-wheels-4f019491
          no-wheels-614d801c
          no-wheels-with-matching-platform-737bbfd4
  
    ''',
  })
# ---
# name: test_list_no_versions
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/does-not-exist.json
          requires-package-does-not-exist
          requires-exact-version-does-not-exist
          requires-greater-version-does-not-exist
          requires-less-version-does-not-exist
          transitive-requires-package-does-not-exist
      scenarios/example.json
          example
      scenarios/excluded.json
          excluded-only-version
          excluded-only-compatible-version
          dependency-excludes-range-of-compatible-versions
          dependency-excludes-non-contiguous-range-of-compatible-versions
      scenarios/extras.json
          extra-required
          missing-extra
          multiple-extras-required
          extra-incompatible-with-extra
          extra-incompatible-with-extra-not-requested
          extra-incompatible-with-root
          extra-does-not-exist-backtrack
      scenarios/incompatible-versions.json
          direct-incompatible-versions
          transitive-incompatible-with-root-version
          transitive-incompatible-with-transitive
      scenarios/prereleases.json
          package-only-prereleases
          package-only-prereleases-in-range
          requires-package-only-prereleases-in-range-global-opt-in
          requires-package-prerelease-and-final-any
          package-prerelease-specified-only-final-available
          package-prerelease-specified-only-prerelease-available
          package-prerelease-specified-mixed-available
          package-multiple-prereleases-kinds
          package-multiple-prereleases-numbers
          transitive-package-only-prereleases
          transitive-package-only-prereleases-in-range
          transitive-package-only-prereleases-in-range-opt-in
          transitive-prerelease-and-stable-dependency
          transitive-prerelease-and-stable-dependency-opt-in
          transitive-prerelease-and-stable-dependency-many-versions
          transitive-prerelease-and-stable-dependency-many-versions-holes
      scenarios/requires-python.json
          requires-python-version-does-not-exist
          requires-python-version-less-than-current
          requires-python-version-greater-than-current
          requires-python-version-greater-than-current-many
          requires-python-version-greater-than-current-backtrack
          requires-python-version-greater-than-current-excluded
      scenarios/wheels.json
          specific-tag-and-default
          only-wheels
          no-wheels
          no-wheels-with-matching-platform
  
    ''',
  })
# ---
# name: test_list_one_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_short_names
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/does-not-exist.json
          57cd4136
          eaa03067
          6e8e01df
          e45cec3c
          aca2796a
      scenarios/example.json
          97db95eb
      scenarios/excluded.json
          7a9ed79c
          b6b89642
          1cd99bd0
          0fd25b39
      scenarios/extras.json
          76e5355c
          0997c767
          e55f15c4
          bf480858
          06ed3759
          b3bfe512
          49778327
      scenarios/incompatible-versions.json
          80d82ee8
          a967e815
          6866d8dc
      scenarios/prereleases.json
          9a1b3dda
          19673198
          51f94da2
          eebe53a6
          9d4725eb
          6cc95bc8
          c97845e2
          e290bf29
          f5948c28
          44ebef16
          27759187
          26efb6c5
          f8aeea37
          184fc65f
          7017673e
          aaee5052
      scenarios/requires-python.json
          0825b69c
          f9296b84
          a11d5394
          02dc550c
          ef060cef
          1bde0c18
      scenarios/wheels.json
          74e4a459
          4f019491
          614d801c
          737bbfd4
  
    ''',
  })
# ---
# name: test_list_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
